--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "bootstrap-sass": "^3.4.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6"
   },
