--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "3.2.0",
     "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
-    "redux-form": "^8.2.6"
+    "redux-form": "^8.2.6",
+    "flux": "^3.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
